Interfaz/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ASSIGN
    BRACKET_CLOSE
    BRACKET_OPEN
    COM
    DIV
    EQ
    GEQ
    GT
    LEFT
    LEQ
    LT
    MINUS
    MULT
    NEQ
    PLUS
    PRINTLN
    RIGHT

Grammar

Rule 0     S' -> program
Rule 1     program -> procedure_list Main
Rule 2     procedure_list -> procedure
Rule 3     procedure_list -> procedure_list procedure
Rule 4     procedure -> PROC ID PAR_OPEN paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
Rule 5     procedure -> PROC ID PAR_OPEN PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
Rule 6     sentencia -> operation
Rule 7     sentencia -> def
Rule 8     sentencia -> put
Rule 9     sentencia -> cup
Rule 10    sentencia -> cdown
Rule 11    sentencia -> cleft
Rule 12    sentencia -> cright
Rule 13    sentencia -> pos
Rule 14    sentencia -> posx
Rule 15    sentencia -> posy
Rule 16    sentencia -> color
Rule 17    sentencia -> down
Rule 18    sentencia -> up
Rule 19    sentencia -> begining
Rule 20    n1 -> NUMBER
Rule 21    n1 -> operation
Rule 22    n1 -> BOOLEAN
Rule 23    n2 -> NUMBER
Rule 24    n2 -> operation
Rule 25    n2 -> ID
Rule 26    n3 -> NUMBER
Rule 27    n3 -> ID
Rule 28    n4 -> NUMBER
Rule 29    n4 -> operation
Rule 30    n4 -> ID
Rule 31    n4 -> BOOLEAN
Rule 32    n5 -> NUMBER
Rule 33    n5 -> ID
Rule 34    n5 -> BOOLEAN
Rule 35    n6 -> NUMBER
Rule 36    n6 -> BOOLEAN
Rule 37    def -> DEF PAR_OPEN ID COLON n6 PAR_CLOSE SEMICOLON
Rule 38    operation -> add
Rule 39    operation -> sub
Rule 40    operation -> equal
Rule 41    operation -> and
Rule 42    operation -> or
Rule 43    operation -> greater
Rule 44    operation -> smaller
Rule 45    operation -> random
Rule 46    operation -> mult
Rule 47    operation -> div
Rule 48    operation -> sum
Rule 49    add -> ADDO PAR_OPEN ID PAR_CLOSE SEMICOLON
Rule 50    add -> ADDO PAR_OPEN ID COLON n2 PAR_CLOSE SEMICOLON
Rule 51    equal -> EQUAL PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
Rule 52    sub -> SUBSTR PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
Rule 53    and -> AND PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
Rule 54    or -> OR PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
Rule 55    greater -> GREATER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
Rule 56    smaller -> SMALLER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
Rule 57    random -> RANDOM PAR_OPEN n3 PAR_CLOSE SEMICOLON
Rule 58    mult -> MULTO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
Rule 59    div -> DIVO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
Rule 60    sum -> SUMO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
Rule 61    put -> PUT PAR_OPEN ID COLON n1 PAR_CLOSE SEMICOLON
Rule 62    cup -> CUP n2 SEMICOLON
Rule 63    cdown -> CDOWN n2 SEMICOLON
Rule 64    cright -> CRIGHT n2 SEMICOLON
Rule 65    cleft -> CLEFT n2 SEMICOLON
Rule 66    pos -> POS PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
Rule 67    posx -> POSX n2 SEMICOLON
Rule 68    posy -> POSY n2 SEMICOLON
Rule 69    color -> COLOR n2 SEMICOLON
Rule 70    down -> DOWN SEMICOLON
Rule 71    up -> UP SEMICOLON
Rule 72    begining -> BEG SEMICOLON
Rule 73    sentencia_list -> sentencia
Rule 74    sentencia_list -> sentencia_list sentencia
Rule 75    forloops -> FOR ID PAR_OPEN NUMBER TO NUMBER PAR_CLOSE LOOP P_OPEN sentencia_list P_CLOSE END LOOP SEMICOLON
Rule 76    whiles -> WHILE P_OPEN n2 P_CLOSE P_OPEN sentencia_list P_CLOSE WHEND SEMICOLON
Rule 77    repeat -> REPEAT P_OPEN sentencia_list P_CLOSE UNTIL P_OPEN n2 P_CLOSE SEMICOLON
Rule 78    caseaux -> WHEN n6 THEN P_OPEN sentencia_list P_CLOSE SEMICOLON
Rule 79    caseaux_list -> caseaux
Rule 80    caseaux_list -> caseaux_list caseaux
Rule 81    case -> CASE ID caseaux_list END CASE SEMICOLON
Rule 82    case -> CASE ID caseaux_list ELSE P_OPEN sentencia_list P_CLOSE END CASE SEMICOLON
Rule 83    paramet_list -> n5
Rule 84    paramet_list -> paramet_list n5
Rule 85    llamada -> CALL ID PAR_OPEN PAR_CLOSE SEMICOLON
Rule 86    llamada_list -> llamada
Rule 87    llamada_list -> llamada_list llamada
Rule 88    codigo -> sentencia
Rule 89    codigo -> case
Rule 90    codigo -> repeat
Rule 91    codigo -> whiles
Rule 92    codigo -> forloops
Rule 93    codigo_list -> codigo
Rule 94    codigo_list -> codigo_list codigo
Rule 95    main_list -> llamada
Rule 96    main_list -> main_list llamada
Rule 97    Main -> MAIN PAR_OPEN PAR_CLOSE P_OPEN main_list P_CLOSE SEMICOLON END

Terminals, with rules where they appear

ADDO                 : 49 50
AND                  : 53
ASSIGN               : 
BEG                  : 72
BOOLEAN              : 22 31 34 36
BRACKET_CLOSE        : 
BRACKET_OPEN         : 
CALL                 : 85
CASE                 : 81 81 82 82
CDOWN                : 63
CLEFT                : 65
COLON                : 37 50 51 52 53 54 55 56 58 59 60 61 66
COLOR                : 69
COM                  : 
CRIGHT               : 64
CUP                  : 62
DEF                  : 37
DIV                  : 
DIVO                 : 59
DOWN                 : 70
ELSE                 : 82
END                  : 4 5 75 81 82 97
EQ                   : 
EQUAL                : 51
FOR                  : 75
GEQ                  : 
GREATER              : 55
GT                   : 
ID                   : 4 5 25 27 30 33 37 49 50 61 75 81 82 85
LEFT                 : 
LEQ                  : 
LOOP                 : 75 75
LT                   : 
MAIN                 : 97
MINUS                : 
MULT                 : 
MULTO                : 58
NEQ                  : 
NUMBER               : 20 23 26 28 32 35 75 75
OR                   : 54
PAR_CLOSE            : 4 5 37 49 50 51 52 53 54 55 56 57 58 59 60 61 66 75 85 97
PAR_OPEN             : 4 5 37 49 50 51 52 53 54 55 56 57 58 59 60 61 66 75 85 97
PLUS                 : 
POS                  : 66
POSX                 : 67
POSY                 : 68
PRINTLN              : 
PROC                 : 4 5
PUT                  : 61
P_CLOSE              : 4 5 75 76 76 77 77 78 82 97
P_OPEN               : 4 5 75 76 76 77 77 78 82 97
RANDOM               : 57
REPEAT               : 77
RIGHT                : 
SEMICOLON            : 4 4 5 5 37 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 75 76 77 78 81 82 85 97
SMALLER              : 56
SUBSTR               : 52
SUMO                 : 60
THEN                 : 78
TO                   : 75
UNTIL                : 77
UP                   : 71
WHEN                 : 78
WHEND                : 76
WHILE                : 76
error                : 

Nonterminals, with rules where they appear

Main                 : 1
add                  : 38
and                  : 41
begining             : 19
case                 : 89
caseaux              : 79 80
caseaux_list         : 80 81 82
cdown                : 10
cleft                : 11
codigo               : 93 94
codigo_list          : 4 5 94
color                : 16
cright               : 12
cup                  : 9
def                  : 7
div                  : 47
down                 : 17
equal                : 40
forloops             : 92
greater              : 43
llamada              : 86 87 95 96
llamada_list         : 87
main_list            : 96 97
mult                 : 46
n1                   : 61
n2                   : 50 51 51 52 55 55 56 56 58 59 60 62 63 64 65 66 66 67 68 69 76 77
n3                   : 52 57 58 59 60
n4                   : 53 53 54 54
n5                   : 83 84
n6                   : 37 78
operation            : 6 21 24 29
or                   : 42
paramet_list         : 4 84
pos                  : 13
posx                 : 14
posy                 : 15
procedure            : 2 3
procedure_list       : 1 3
program              : 0
put                  : 8
random               : 45
repeat               : 90
sentencia            : 73 74 88
sentencia_list       : 74 75 76 77 78 82
smaller              : 44
sub                  : 39
sum                  : 48
up                   : 18
whiles               : 91

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . procedure_list Main
    (2) procedure_list -> . procedure
    (3) procedure_list -> . procedure_list procedure
    (4) procedure -> . PROC ID PAR_OPEN paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (5) procedure -> . PROC ID PAR_OPEN PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    PROC            shift and go to state 4

    program                        shift and go to state 1
    procedure_list                 shift and go to state 2
    procedure                      shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> procedure_list . Main
    (3) procedure_list -> procedure_list . procedure
    (97) Main -> . MAIN PAR_OPEN PAR_CLOSE P_OPEN main_list P_CLOSE SEMICOLON END
    (4) procedure -> . PROC ID PAR_OPEN paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (5) procedure -> . PROC ID PAR_OPEN PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    MAIN            shift and go to state 7
    PROC            shift and go to state 4

    Main                           shift and go to state 5
    procedure                      shift and go to state 6

state 3

    (2) procedure_list -> procedure .

    MAIN            reduce using rule 2 (procedure_list -> procedure .)
    PROC            reduce using rule 2 (procedure_list -> procedure .)


state 4

    (4) procedure -> PROC . ID PAR_OPEN paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (5) procedure -> PROC . ID PAR_OPEN PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    ID              shift and go to state 8


state 5

    (1) program -> procedure_list Main .

    $end            reduce using rule 1 (program -> procedure_list Main .)


state 6

    (3) procedure_list -> procedure_list procedure .

    MAIN            reduce using rule 3 (procedure_list -> procedure_list procedure .)
    PROC            reduce using rule 3 (procedure_list -> procedure_list procedure .)


state 7

    (97) Main -> MAIN . PAR_OPEN PAR_CLOSE P_OPEN main_list P_CLOSE SEMICOLON END

    PAR_OPEN        shift and go to state 9


state 8

    (4) procedure -> PROC ID . PAR_OPEN paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (5) procedure -> PROC ID . PAR_OPEN PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    PAR_OPEN        shift and go to state 10


state 9

    (97) Main -> MAIN PAR_OPEN . PAR_CLOSE P_OPEN main_list P_CLOSE SEMICOLON END

    PAR_CLOSE       shift and go to state 11


state 10

    (4) procedure -> PROC ID PAR_OPEN . paramet_list PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (5) procedure -> PROC ID PAR_OPEN . PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (83) paramet_list -> . n5
    (84) paramet_list -> . paramet_list n5
    (32) n5 -> . NUMBER
    (33) n5 -> . ID
    (34) n5 -> . BOOLEAN

    PAR_CLOSE       shift and go to state 14
    NUMBER          shift and go to state 16
    ID              shift and go to state 12
    BOOLEAN         shift and go to state 17

    paramet_list                   shift and go to state 13
    n5                             shift and go to state 15

state 11

    (97) Main -> MAIN PAR_OPEN PAR_CLOSE . P_OPEN main_list P_CLOSE SEMICOLON END

    P_OPEN          shift and go to state 18


state 12

    (33) n5 -> ID .

    PAR_CLOSE       reduce using rule 33 (n5 -> ID .)
    NUMBER          reduce using rule 33 (n5 -> ID .)
    ID              reduce using rule 33 (n5 -> ID .)
    BOOLEAN         reduce using rule 33 (n5 -> ID .)


state 13

    (4) procedure -> PROC ID PAR_OPEN paramet_list . PAR_CLOSE P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (84) paramet_list -> paramet_list . n5
    (32) n5 -> . NUMBER
    (33) n5 -> . ID
    (34) n5 -> . BOOLEAN

    PAR_CLOSE       shift and go to state 19
    NUMBER          shift and go to state 16
    ID              shift and go to state 12
    BOOLEAN         shift and go to state 17

    n5                             shift and go to state 20

state 14

    (5) procedure -> PROC ID PAR_OPEN PAR_CLOSE . P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    P_OPEN          shift and go to state 21


state 15

    (83) paramet_list -> n5 .

    PAR_CLOSE       reduce using rule 83 (paramet_list -> n5 .)
    NUMBER          reduce using rule 83 (paramet_list -> n5 .)
    ID              reduce using rule 83 (paramet_list -> n5 .)
    BOOLEAN         reduce using rule 83 (paramet_list -> n5 .)


state 16

    (32) n5 -> NUMBER .

    PAR_CLOSE       reduce using rule 32 (n5 -> NUMBER .)
    NUMBER          reduce using rule 32 (n5 -> NUMBER .)
    ID              reduce using rule 32 (n5 -> NUMBER .)
    BOOLEAN         reduce using rule 32 (n5 -> NUMBER .)


state 17

    (34) n5 -> BOOLEAN .

    PAR_CLOSE       reduce using rule 34 (n5 -> BOOLEAN .)
    NUMBER          reduce using rule 34 (n5 -> BOOLEAN .)
    ID              reduce using rule 34 (n5 -> BOOLEAN .)
    BOOLEAN         reduce using rule 34 (n5 -> BOOLEAN .)


state 18

    (97) Main -> MAIN PAR_OPEN PAR_CLOSE P_OPEN . main_list P_CLOSE SEMICOLON END
    (95) main_list -> . llamada
    (96) main_list -> . main_list llamada
    (85) llamada -> . CALL ID PAR_OPEN PAR_CLOSE SEMICOLON

    CALL            shift and go to state 24

    main_list                      shift and go to state 22
    llamada                        shift and go to state 23

state 19

    (4) procedure -> PROC ID PAR_OPEN paramet_list PAR_CLOSE . P_OPEN codigo_list P_CLOSE SEMICOLON END SEMICOLON

    P_OPEN          shift and go to state 25


state 20

    (84) paramet_list -> paramet_list n5 .

    PAR_CLOSE       reduce using rule 84 (paramet_list -> paramet_list n5 .)
    NUMBER          reduce using rule 84 (paramet_list -> paramet_list n5 .)
    ID              reduce using rule 84 (paramet_list -> paramet_list n5 .)
    BOOLEAN         reduce using rule 84 (paramet_list -> paramet_list n5 .)


state 21

    (5) procedure -> PROC ID PAR_OPEN PAR_CLOSE P_OPEN . codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (93) codigo_list -> . codigo
    (94) codigo_list -> . codigo_list codigo
    (88) codigo -> . sentencia
    (89) codigo -> . case
    (90) codigo -> . repeat
    (91) codigo -> . whiles
    (92) codigo -> . forloops
    (6) sentencia -> . operation
    (7) sentencia -> . def
    (8) sentencia -> . put
    (9) sentencia -> . cup
    (10) sentencia -> . cdown
    (11) sentencia -> . cleft
    (12) sentencia -> . cright
    (13) sentencia -> . pos
    (14) sentencia -> . posx
    (15) sentencia -> . posy
    (16) sentencia -> . color
    (17) sentencia -> . down
    (18) sentencia -> . up
    (19) sentencia -> . begining
    (81) case -> . CASE ID caseaux_list END CASE SEMICOLON
    (82) case -> . CASE ID caseaux_list ELSE P_OPEN sentencia_list P_CLOSE END CASE SEMICOLON
    (77) repeat -> . REPEAT P_OPEN sentencia_list P_CLOSE UNTIL P_OPEN n2 P_CLOSE SEMICOLON
    (76) whiles -> . WHILE P_OPEN n2 P_CLOSE P_OPEN sentencia_list P_CLOSE WHEND SEMICOLON
    (75) forloops -> . FOR ID PAR_OPEN NUMBER TO NUMBER PAR_CLOSE LOOP P_OPEN sentencia_list P_CLOSE END LOOP SEMICOLON
    (38) operation -> . add
    (39) operation -> . sub
    (40) operation -> . equal
    (41) operation -> . and
    (42) operation -> . or
    (43) operation -> . greater
    (44) operation -> . smaller
    (45) operation -> . random
    (46) operation -> . mult
    (47) operation -> . div
    (48) operation -> . sum
    (37) def -> . DEF PAR_OPEN ID COLON n6 PAR_CLOSE SEMICOLON
    (61) put -> . PUT PAR_OPEN ID COLON n1 PAR_CLOSE SEMICOLON
    (62) cup -> . CUP n2 SEMICOLON
    (63) cdown -> . CDOWN n2 SEMICOLON
    (65) cleft -> . CLEFT n2 SEMICOLON
    (64) cright -> . CRIGHT n2 SEMICOLON
    (66) pos -> . POS PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (67) posx -> . POSX n2 SEMICOLON
    (68) posy -> . POSY n2 SEMICOLON
    (69) color -> . COLOR n2 SEMICOLON
    (70) down -> . DOWN SEMICOLON
    (71) up -> . UP SEMICOLON
    (72) begining -> . BEG SEMICOLON
    (49) add -> . ADDO PAR_OPEN ID PAR_CLOSE SEMICOLON
    (50) add -> . ADDO PAR_OPEN ID COLON n2 PAR_CLOSE SEMICOLON
    (52) sub -> . SUBSTR PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (51) equal -> . EQUAL PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (53) and -> . AND PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (54) or -> . OR PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (55) greater -> . GREATER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (56) smaller -> . SMALLER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (57) random -> . RANDOM PAR_OPEN n3 PAR_CLOSE SEMICOLON
    (58) mult -> . MULTO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (59) div -> . DIVO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (60) sum -> . SUMO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON

    CASE            shift and go to state 47
    REPEAT          shift and go to state 48
    WHILE           shift and go to state 49
    FOR             shift and go to state 50
    DEF             shift and go to state 62
    PUT             shift and go to state 63
    CUP             shift and go to state 64
    CDOWN           shift and go to state 65
    CLEFT           shift and go to state 66
    CRIGHT          shift and go to state 67
    POS             shift and go to state 68
    POSX            shift and go to state 69
    POSY            shift and go to state 70
    COLOR           shift and go to state 71
    DOWN            shift and go to state 72
    UP              shift and go to state 73
    BEG             shift and go to state 74
    ADDO            shift and go to state 75
    SUBSTR          shift and go to state 76
    EQUAL           shift and go to state 77
    AND             shift and go to state 78
    OR              shift and go to state 79
    GREATER         shift and go to state 80
    SMALLER         shift and go to state 81
    RANDOM          shift and go to state 82
    MULTO           shift and go to state 83
    DIVO            shift and go to state 84
    SUMO            shift and go to state 85

    codigo_list                    shift and go to state 26
    codigo                         shift and go to state 27
    sentencia                      shift and go to state 28
    case                           shift and go to state 29
    repeat                         shift and go to state 30
    whiles                         shift and go to state 31
    forloops                       shift and go to state 32
    operation                      shift and go to state 33
    def                            shift and go to state 34
    put                            shift and go to state 35
    cup                            shift and go to state 36
    cdown                          shift and go to state 37
    cleft                          shift and go to state 38
    cright                         shift and go to state 39
    pos                            shift and go to state 40
    posx                           shift and go to state 41
    posy                           shift and go to state 42
    color                          shift and go to state 43
    down                           shift and go to state 44
    up                             shift and go to state 45
    begining                       shift and go to state 46
    add                            shift and go to state 51
    sub                            shift and go to state 52
    equal                          shift and go to state 53
    and                            shift and go to state 54
    or                             shift and go to state 55
    greater                        shift and go to state 56
    smaller                        shift and go to state 57
    random                         shift and go to state 58
    mult                           shift and go to state 59
    div                            shift and go to state 60
    sum                            shift and go to state 61

state 22

    (97) Main -> MAIN PAR_OPEN PAR_CLOSE P_OPEN main_list . P_CLOSE SEMICOLON END
    (96) main_list -> main_list . llamada
    (85) llamada -> . CALL ID PAR_OPEN PAR_CLOSE SEMICOLON

    P_CLOSE         shift and go to state 86
    CALL            shift and go to state 24

    llamada                        shift and go to state 87

state 23

    (95) main_list -> llamada .

    P_CLOSE         reduce using rule 95 (main_list -> llamada .)
    CALL            reduce using rule 95 (main_list -> llamada .)


state 24

    (85) llamada -> CALL . ID PAR_OPEN PAR_CLOSE SEMICOLON

    ID              shift and go to state 88


state 25

    (4) procedure -> PROC ID PAR_OPEN paramet_list PAR_CLOSE P_OPEN . codigo_list P_CLOSE SEMICOLON END SEMICOLON
    (93) codigo_list -> . codigo
    (94) codigo_list -> . codigo_list codigo
    (88) codigo -> . sentencia
    (89) codigo -> . case
    (90) codigo -> . repeat
    (91) codigo -> . whiles
    (92) codigo -> . forloops
    (6) sentencia -> . operation
    (7) sentencia -> . def
    (8) sentencia -> . put
    (9) sentencia -> . cup
    (10) sentencia -> . cdown
    (11) sentencia -> . cleft
    (12) sentencia -> . cright
    (13) sentencia -> . pos
    (14) sentencia -> . posx
    (15) sentencia -> . posy
    (16) sentencia -> . color
    (17) sentencia -> . down
    (18) sentencia -> . up
    (19) sentencia -> . begining
    (81) case -> . CASE ID caseaux_list END CASE SEMICOLON
    (82) case -> . CASE ID caseaux_list ELSE P_OPEN sentencia_list P_CLOSE END CASE SEMICOLON
    (77) repeat -> . REPEAT P_OPEN sentencia_list P_CLOSE UNTIL P_OPEN n2 P_CLOSE SEMICOLON
    (76) whiles -> . WHILE P_OPEN n2 P_CLOSE P_OPEN sentencia_list P_CLOSE WHEND SEMICOLON
    (75) forloops -> . FOR ID PAR_OPEN NUMBER TO NUMBER PAR_CLOSE LOOP P_OPEN sentencia_list P_CLOSE END LOOP SEMICOLON
    (38) operation -> . add
    (39) operation -> . sub
    (40) operation -> . equal
    (41) operation -> . and
    (42) operation -> . or
    (43) operation -> . greater
    (44) operation -> . smaller
    (45) operation -> . random
    (46) operation -> . mult
    (47) operation -> . div
    (48) operation -> . sum
    (37) def -> . DEF PAR_OPEN ID COLON n6 PAR_CLOSE SEMICOLON
    (61) put -> . PUT PAR_OPEN ID COLON n1 PAR_CLOSE SEMICOLON
    (62) cup -> . CUP n2 SEMICOLON
    (63) cdown -> . CDOWN n2 SEMICOLON
    (65) cleft -> . CLEFT n2 SEMICOLON
    (64) cright -> . CRIGHT n2 SEMICOLON
    (66) pos -> . POS PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (67) posx -> . POSX n2 SEMICOLON
    (68) posy -> . POSY n2 SEMICOLON
    (69) color -> . COLOR n2 SEMICOLON
    (70) down -> . DOWN SEMICOLON
    (71) up -> . UP SEMICOLON
    (72) begining -> . BEG SEMICOLON
    (49) add -> . ADDO PAR_OPEN ID PAR_CLOSE SEMICOLON
    (50) add -> . ADDO PAR_OPEN ID COLON n2 PAR_CLOSE SEMICOLON
    (52) sub -> . SUBSTR PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (51) equal -> . EQUAL PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (53) and -> . AND PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (54) or -> . OR PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (55) greater -> . GREATER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (56) smaller -> . SMALLER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (57) random -> . RANDOM PAR_OPEN n3 PAR_CLOSE SEMICOLON
    (58) mult -> . MULTO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (59) div -> . DIVO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (60) sum -> . SUMO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON

    CASE            shift and go to state 47
    REPEAT          shift and go to state 48
    WHILE           shift and go to state 49
    FOR             shift and go to state 50
    DEF             shift and go to state 62
    PUT             shift and go to state 63
    CUP             shift and go to state 64
    CDOWN           shift and go to state 65
    CLEFT           shift and go to state 66
    CRIGHT          shift and go to state 67
    POS             shift and go to state 68
    POSX            shift and go to state 69
    POSY            shift and go to state 70
    COLOR           shift and go to state 71
    DOWN            shift and go to state 72
    UP              shift and go to state 73
    BEG             shift and go to state 74
    ADDO            shift and go to state 75
    SUBSTR          shift and go to state 76
    EQUAL           shift and go to state 77
    AND             shift and go to state 78
    OR              shift and go to state 79
    GREATER         shift and go to state 80
    SMALLER         shift and go to state 81
    RANDOM          shift and go to state 82
    MULTO           shift and go to state 83
    DIVO            shift and go to state 84
    SUMO            shift and go to state 85

    codigo_list                    shift and go to state 89
    codigo                         shift and go to state 27
    sentencia                      shift and go to state 28
    case                           shift and go to state 29
    repeat                         shift and go to state 30
    whiles                         shift and go to state 31
    forloops                       shift and go to state 32
    operation                      shift and go to state 33
    def                            shift and go to state 34
    put                            shift and go to state 35
    cup                            shift and go to state 36
    cdown                          shift and go to state 37
    cleft                          shift and go to state 38
    cright                         shift and go to state 39
    pos                            shift and go to state 40
    posx                           shift and go to state 41
    posy                           shift and go to state 42
    color                          shift and go to state 43
    down                           shift and go to state 44
    up                             shift and go to state 45
    begining                       shift and go to state 46
    add                            shift and go to state 51
    sub                            shift and go to state 52
    equal                          shift and go to state 53
    and                            shift and go to state 54
    or                             shift and go to state 55
    greater                        shift and go to state 56
    smaller                        shift and go to state 57
    random                         shift and go to state 58
    mult                           shift and go to state 59
    div                            shift and go to state 60
    sum                            shift and go to state 61

state 26

    (5) procedure -> PROC ID PAR_OPEN PAR_CLOSE P_OPEN codigo_list . P_CLOSE SEMICOLON END SEMICOLON
    (94) codigo_list -> codigo_list . codigo
    (88) codigo -> . sentencia
    (89) codigo -> . case
    (90) codigo -> . repeat
    (91) codigo -> . whiles
    (92) codigo -> . forloops
    (6) sentencia -> . operation
    (7) sentencia -> . def
    (8) sentencia -> . put
    (9) sentencia -> . cup
    (10) sentencia -> . cdown
    (11) sentencia -> . cleft
    (12) sentencia -> . cright
    (13) sentencia -> . pos
    (14) sentencia -> . posx
    (15) sentencia -> . posy
    (16) sentencia -> . color
    (17) sentencia -> . down
    (18) sentencia -> . up
    (19) sentencia -> . begining
    (81) case -> . CASE ID caseaux_list END CASE SEMICOLON
    (82) case -> . CASE ID caseaux_list ELSE P_OPEN sentencia_list P_CLOSE END CASE SEMICOLON
    (77) repeat -> . REPEAT P_OPEN sentencia_list P_CLOSE UNTIL P_OPEN n2 P_CLOSE SEMICOLON
    (76) whiles -> . WHILE P_OPEN n2 P_CLOSE P_OPEN sentencia_list P_CLOSE WHEND SEMICOLON
    (75) forloops -> . FOR ID PAR_OPEN NUMBER TO NUMBER PAR_CLOSE LOOP P_OPEN sentencia_list P_CLOSE END LOOP SEMICOLON
    (38) operation -> . add
    (39) operation -> . sub
    (40) operation -> . equal
    (41) operation -> . and
    (42) operation -> . or
    (43) operation -> . greater
    (44) operation -> . smaller
    (45) operation -> . random
    (46) operation -> . mult
    (47) operation -> . div
    (48) operation -> . sum
    (37) def -> . DEF PAR_OPEN ID COLON n6 PAR_CLOSE SEMICOLON
    (61) put -> . PUT PAR_OPEN ID COLON n1 PAR_CLOSE SEMICOLON
    (62) cup -> . CUP n2 SEMICOLON
    (63) cdown -> . CDOWN n2 SEMICOLON
    (65) cleft -> . CLEFT n2 SEMICOLON
    (64) cright -> . CRIGHT n2 SEMICOLON
    (66) pos -> . POS PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (67) posx -> . POSX n2 SEMICOLON
    (68) posy -> . POSY n2 SEMICOLON
    (69) color -> . COLOR n2 SEMICOLON
    (70) down -> . DOWN SEMICOLON
    (71) up -> . UP SEMICOLON
    (72) begining -> . BEG SEMICOLON
    (49) add -> . ADDO PAR_OPEN ID PAR_CLOSE SEMICOLON
    (50) add -> . ADDO PAR_OPEN ID COLON n2 PAR_CLOSE SEMICOLON
    (52) sub -> . SUBSTR PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (51) equal -> . EQUAL PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (53) and -> . AND PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (54) or -> . OR PAR_OPEN n4 COLON n4 PAR_CLOSE SEMICOLON
    (55) greater -> . GREATER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (56) smaller -> . SMALLER PAR_OPEN n2 COLON n2 PAR_CLOSE SEMICOLON
    (57) random -> . RANDOM PAR_OPEN n3 PAR_CLOSE SEMICOLON
    (58) mult -> . MULTO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (59) div -> . DIVO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON
    (60) sum -> . SUMO PAR_OPEN n3 COLON n2 PAR_CLOSE SEMICOLON

    P_CLOSE         shift and go to state 90
    CASE            shift and go to state 47
    REPEAT          shift and go to state 48
    WHILE           shift and go to state 49
    FOR             shift and go to state 50
    DEF             shift and go to state 62
    PUT             shift and go to state 63
    CUP             shift and go to state 64
    CDOWN           shift and go to state 65
    CLEFT           shift and go to state 66
    CRIGHT          shift and go to state 67
    POS             shift and go to state 68
    POSX            shift and go to state 69
    POSY            shift and go to state 70
    COLOR           shift and go to state 71
    DOWN            shift and go to state 72
    UP              shift and go to state 73
    BEG             shift and go to state 74
    ADDO            shift and go to state 75
    SUBSTR          shift and go to state 76
    EQUAL           shift and go to state 77
    AND             shift and go to state 78
    OR              shift and go to state 79
    GREATER         shift and go to state 80
    SMALLER         shift and go to state 81
    RANDOM          shift and go to state 82
    MULTO           shift and go to state 83
    DIVO            shift and go to state 84
    SUMO            shift and go to state 85
